--- a/css/nav-homepage.css
+++ b/css/nav-homepage.css
@@ -1,7 +1,6 @@
 /* navbar */
 
 header {
-  overflow-x: hidden;
 }
 
 .nav-homepage-sticky {
@@ -11,6 +10,8 @@ header {
   width: 100%;
   z-index: 5;
   background-color: var(--bgc);
+
+  /* overflow-x: hidden; */
 }
 
 .nav-homepage {
