--- a/css/autoshop-section.css
+++ b/css/autoshop-section.css
@@ -19,6 +19,19 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 var(--blue-clr);
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+
+.auto-shop-btn:hover {
+  box-shadow: inset 800px 0 0 0 var(--blue-clr);
+  color: var(--text-clr);
+
+  border: none;
 }
 
 @media (max-width: 1200px) {
