--- a/css/slider-section.css
+++ b/css/slider-section.css
@@ -103,7 +103,6 @@
 }
 
 .marquee-content > li > img {
-  /* object-fit: cover; */
   border: 1px solid #fff;
 }
 
@@ -115,6 +114,19 @@
   justify-self: center;
 
   margin-top: 2rem;
+
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 var(--blue-clr);
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
+}
+
+.slider-btn:hover {
+  box-shadow: inset 800px 0 0 0 var(--blue-clr);
+  color: var(--text-clr);
+
+  border: none;
 }
 
 @media (max-width: 1200px) {
