--- a/css/splashscreen-text.css
+++ b/css/splashscreen-text.css
@@ -7,19 +7,131 @@
 }
 
 .splash-enter {
+  background-color: var(--bgc);
+  padding: 0.5rem 1rem;
+}
+
+.splash-enter {
+  display: inline-block;
+  position: relative;
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
   font-weight: 500;
   font-size: 3rem;
+  font-family: var(--anglecut);
   text-decoration: none;
   color: var(--text-clr);
-  font-family: var(--anglecut);
+  text-align: center;
+  text-transform: uppercase;
+  transition: all 0.2s ease;
+  margin: 0 auto;
+}
 
-  display: block;
+.splash-enter:before,
+.splash-enter:after {
+  content: 'ENTER';
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 8px 0;
+  width: 100%;
+  -webkit-clip: rect(0px, 0px, 0px, 0px);
+  clip: rect(0px, 0px, 0px, 0px);
+  background: var(--text-clr);
+  color: var(--bgc);
+}
+
+.splash-enter:before {
+  left: -3px;
+  top: -2px;
+  text-shadow: 2px 0 var(--text-clr);
+  box-shadow: 2px 0 var(--text-clr);
+}
+
+.splash-enter:after {
+  left: 2px;
+  bottom: -2px;
+  text-shadow: -1px 0 var(--text-clr);
+  box-shadow: -1px 0 var(--text-clr);
+}
+
+.splash-enter:hover {
+  background: var(--text-clr);
+  color: var(--bgc);
+}
+
+.splash-enter:hover:before {
+  animation: glitch-test 1.5s infinite linear alternate-reverse;
+}
+
+.splash-enter:hover:after {
+  animation: glitch-test 2s infinite linear alternate;
+}
+
+@keyframes glitch-test {
+  0% {
+    clip: rect(-3px, 600px, 0px, 0px);
+  }
+  5.88235% {
+    clip: rect(0px, 600px, 0px, 0px);
+  }
+  11.76471% {
+    clip: rect(-3px, 600px, 0px, 0px);
+  }
+  17.64706% {
+    clip: rect(-3px, 600px, 0px, 0px);
+  }
+  23.52941% {
+    clip: rect(100px, 600px, 100px, 0px);
+  }
+  29.41176% {
+    clip: rect(0px, 600px, 600px, 0px);
+  }
+  35.29412% {
+    clip: rect(100px, 600px, 0px, 0px);
+  }
+  41.17647% {
+    clip: rect(0px, 600px, 600px, 0px);
+  }
+  47.05882% {
+    clip: rect(100px, 600px, 0px, 0px);
+  }
+  52.94118% {
+    clip: rect(-3px, 600px, 0px, 0px);
+  }
+  58.82353% {
+    clip: rect(100px, 450px, 100px, 0px);
+  }
+  64.70588% {
+    clip: rect(0px, 450px, 0px, 0px);
+  }
+  70.58824% {
+    clip: rect(100px, 450px, 100px, 0px);
+  }
+  76.47059% {
+    clip: rect(0px, 450px, 0px, 0px);
+  }
+  82.35294% {
+    clip: rect(0px, 450px, 0px, 0px);
+  }
+  88.23529% {
+    clip: rect(0px, 450px, 0px, 0px);
+  }
+  94.11765% {
+    clip: rect(0px, 450px, 0px, 0px);
+  }
+  100% {
+    clip: rect(0px, 450px, 0px, 0px);
+  }
 }
 
 .splash-text-img {
   text-align: center;
-  display: inline-block;
-  margin: 0.5rem 0;
+  margin-top: 0.25rem;
+  margin-bottom: 0.5rem;
 }
 
 .splash-desc {
