--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,33 @@ section {
   background-color: var(--bgc);
   color: var(--text-clr);
   text-decoration: none;
-  border-radius: 1rem;
 
-  transition: color 0.2s ease, background-color 0.2s ease;
+  letter-spacing: 1px;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 var(--blue-clr);
+  -webkit-transition: ease-out 0.4s;
+  -moz-transition: ease-out 0.4s;
+  transition: ease-out 0.4s;
 }
 
 .btn:hover {
-  background-color: var(--text-clr);
-  color: var(--bgc);
+  box-shadow: inset 400px 0 0 0 var(--blue-clr);
+  color: var(--text-clr);
+
+  border: none;
+}
+
+/* preloader */
+
+#preloader {
+  background: #000 url('../img/preloader.gif');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 100;
 }
