--- a/css/splashscreen-text.css
+++ b/css/splashscreen-text.css
@@ -18,7 +18,7 @@
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 0.5rem;
   font-weight: 500;
   font-size: 3rem;
   font-family: var(--anglecut);
@@ -28,6 +28,10 @@
   text-transform: uppercase;
   transition: all 0.2s ease;
   margin: 0 auto;
+
+  background: var(--text-clr);
+  color: var(--bgc);
+  border-radius: 2px;
 }
 
 .splash-enter:before,
@@ -36,11 +40,12 @@
   position: absolute;
   top: 0;
   left: 0;
-  padding: 8px 0;
+  padding: 0.5rem 0;
   width: 100%;
   -webkit-clip: rect(0px, 0px, 0px, 0px);
   clip: rect(0px, 0px, 0px, 0px);
   background: var(--text-clr);
+  border-radius: 2px;
   color: var(--bgc);
 }
 
@@ -49,6 +54,9 @@
   top: -2px;
   text-shadow: 2px 0 var(--text-clr);
   box-shadow: 2px 0 var(--text-clr);
+  border-radius: 2px;
+
+  animation: glitch-test 1s infinite linear alternate-reverse;
 }
 
 .splash-enter:after {
@@ -56,20 +64,24 @@
   bottom: -2px;
   text-shadow: -1px 0 var(--text-clr);
   box-shadow: -1px 0 var(--text-clr);
-}
+  border-radius: 2px;
 
-.splash-enter:hover {
-  background: var(--text-clr);
-  color: var(--bgc);
-}
-
-.splash-enter:hover:before {
-  animation: glitch-test 1s infinite linear alternate-reverse;
-}
-
-.splash-enter:hover:after {
   animation: glitch-test 1s infinite linear alternate;
 }
+
+/* .splash-enter:hover {
+  background: var(--text-clr);
+  color: var(--bgc);
+  border-radius: 2px;
+} */
+
+/* .splash-enter:hover:before {
+  animation: glitch-test 1s infinite linear alternate-reverse;
+} */
+
+/* .splash-enter:hover:after {
+  animation: glitch-test 1s infinite linear alternate;
+} */
 
 @keyframes glitch-test {
   0% {
