--- a/css/style.css
+++ b/css/style.css
@@ -91,3 +91,12 @@ section {
   left: 0px;
   z-index: 100;
 }
+
+@media (max-width: 1200px) {
+}
+
+@media (max-width: 800px) {
+  #preloader {
+    background-size: 100%;
+  }
+}
