--- a/css/slider-section.css
+++ b/css/slider-section.css
@@ -1,5 +1,65 @@
 /* slider section */
 
+.charector-tabs {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+
+  margin-bottom: 4rem;
+}
+
+.jdm {
+  background-color: var(--blue-clr);
+}
+
+.exotic {
+  background-color: #ed2224;
+}
+
+.muscle {
+  background-color: #7e736d;
+}
+
+.euro {
+  background-color: #4c44a7;
+}
+
+.charector-tab {
+  padding: 1rem 2rem;
+  font-size: 2rem;
+  font-family: var(--anglecut);
+  text-transform: uppercase;
+  border-radius: 2rem;
+
+  letter-spacing: 1px;
+  cursor: pointer;
+  box-shadow: inset 0 0 0 0 var(--text-clr);
+  -webkit-transition: ease-out 0.6s;
+  -moz-transition: ease-out 0.6s;
+  transition: ease-out 0.6s;
+}
+
+.jdm:hover {
+  box-shadow: inset 400px 0 0 0 var(--text-clr);
+  color: var(--blue-clr);
+}
+
+.exotic:hover {
+  box-shadow: inset 400px 0 0 0 var(--text-clr);
+  color: var(--blue-clr);
+}
+
+.muscle:hover {
+  box-shadow: inset 400px 0 0 0 var(--text-clr);
+  color: var(--blue-clr);
+}
+
+.euro:hover {
+  box-shadow: inset 400px 0 0 0 var(--text-clr);
+  color: var(--blue-clr);
+}
+
 .slider-item {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -51,6 +111,10 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   column-gap: 2rem;
+}
+
+.charector-img {
+  align-self: center;
 }
 
 .marquee {
@@ -151,8 +215,27 @@
     font-size: 1.5rem;
     border-radius: 0.5rem;
   }
+}
+
+@media (max-width: 1000px) {
+  .slider-item {
+    grid-template-columns: 1fr;
+    row-gap: 2rem;
+  }
+
+  .slider-text,
+  .slider-images {
+    max-width: 800px;
+    margin: 0 auto;
+  }
+
+  .marquee {
+    justify-self: flex-end;
+  }
 
   .charector-img {
-    align-self: center;
+    width: 100%;
+    max-width: 420px;
+    /* justify-self: center; */
   }
 }
