--- a/css/slider-section.css
+++ b/css/slider-section.css
@@ -26,11 +26,10 @@
 }
 
 .charector-tab {
-  padding: 1rem 2rem;
+  padding: 0.5rem 1rem;
   font-size: 2rem;
   font-family: var(--anglecut);
   text-transform: uppercase;
-  border-radius: 2rem;
 
   letter-spacing: 1px;
   cursor: pointer;
@@ -61,9 +60,18 @@
 }
 
 .slider-item {
+  display: none;
+}
+
+.active-slider-item {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 2rem;
+}
+
+.active-tab {
+  background-color: var(--text-clr);
+  color: var(--blue-clr);
 }
 
 .slider-item-title {
@@ -229,6 +237,12 @@
     margin: 0 auto;
   }
 
+  .charector-tabs {
+    max-width: 800px;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+  }
+
   .marquee {
     justify-self: flex-end;
   }
@@ -236,6 +250,16 @@
   .charector-img {
     width: 100%;
     max-width: 420px;
-    /* justify-self: center; */
+  }
+
+  .charector-tab {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 800px) {
+  .charector-tab {
+    padding: 0.25rem 0.5rem;
+    font-size: 1rem;
   }
 }
