--- a/css/style.css
+++ b/css/style.css
@@ -80,10 +80,10 @@ section {
 /* preloader */
 
 #preloader {
-  background: #000 url('../img/preloader.gif');
+  background: #000 url('../img/gliched-logo.gif');
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 50%;
+  background-size: 20%;
   height: 100vh;
   width: 100%;
   position: fixed;
