--- a/css/nav-homepage.css
+++ b/css/nav-homepage.css
@@ -20,6 +20,13 @@ header {
   align-items: center;
 
   padding: 1rem 0;
+
+  transition: transform 0.9s ease-out, opacity 0.6s ease-out;
+}
+
+.nav-hidden {
+  opacity: 0;
+  transform: translateY(-4rem);
 }
 
 .nav-homepage-logo {
