--- a/css/welcome-section.css
+++ b/css/welcome-section.css
@@ -55,6 +55,8 @@
   justify-content: center;
 
   position: relative;
+
+  transition: transform 1s ease-out, opacity 1.5s ease-out;
 }
 
 .mint-btn-container-img {
@@ -82,7 +84,7 @@
   background: linear-gradient(
     90deg,
     rgba(0, 0, 0, 1) 25%,
-    rgba(255, 255, 255, 0.15) 100%
+    rgba(255, 255, 255, 0.05) 100%
   );
 
   border-radius: 0.25rem;
@@ -90,6 +92,8 @@
   position: absolute;
   bottom: 10px;
   left: 0;
+
+  transition: transform 1s ease-out, opacity 1.5s ease-out;
 }
 
 .alert-icon {
@@ -158,4 +162,46 @@
   .alert-icon {
     width: 7.5rem;
   }
+}
+
+/* title hidden */
+
+.title-hidden {
+  opacity: 0;
+  transform: translateY(2rem);
+}
+
+/* text hidden */
+
+.text-hidden {
+  opacity: 0;
+  transform: translateY(2rem);
+}
+
+/* text hidden */
+
+.link-hidden {
+  opacity: 0;
+  transform: translateY(2rem);
+}
+
+/* welcome section social links hidden */
+
+.welcome-section-social-links-hidden {
+  opacity: 0;
+  transform: translateY(2rem);
+}
+
+/* mint button container hidden */
+
+.mint-button-container-hidden {
+  opacity: 0;
+  transform: translateY(2rem);
+}
+
+/* alert box hidden */
+
+.alert-box-hidden {
+  opacity: 0;
+  transform: translateY(2rem);
 }
