--- a/css/nav-homepage.css
+++ b/css/nav-homepage.css
@@ -21,7 +21,20 @@ header {
 
   padding: 1rem 0;
 
-  transition: transform 0.9s ease-out, opacity 0.6s ease-out;
+  animation-duration: 1.2s;
+  animation-name: slideup;
+}
+
+@keyframes slideup {
+  from {
+    opacity: 0;
+    transform: translateY(-4rem);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
 }
 
 .nav-hidden {
