--- a/css/team-section.css
+++ b/css/team-section.css
@@ -13,6 +13,25 @@
   text-align: center;
 }
 
+.team-member-one {
+  transition: transform 0.7s ease-out 0s, opacity 0.7s ease-out 0s;
+}
+.team-member-two {
+  transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
+}
+.team-member-three {
+  transition: transform 0.7s ease-out 0.6s, opacity 0.7s ease-out 0.6s;
+}
+.team-member-four {
+  transition: transform 0.7s ease-out 0s, opacity 0.7s ease-out 0s;
+}
+.team-member-five {
+  transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
+}
+.team-member-six {
+  transition: transform 0.7s ease-out 0.6s, opacity 0.7s ease-out 0.6s;
+}
+
 .member-image {
   width: 100%;
   max-width: 300px;
