--- a/css/collection-section.css
+++ b/css/collection-section.css
@@ -2,17 +2,13 @@
 .collection-section-title {
   margin-bottom: 1rem;
   font-size: 2rem;
-
-  transition: transform 1s ease-out, opacity 1.5s ease-out;
 }
 
 .collection-desc {
   line-height: 1.6;
   max-width: 70ch;
 
-  transition: transform 1s ease-out, opacity 1.5s ease-out;
-
-  transition-delay: 0.25s;
+  transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
 
 .collection-images-container {
@@ -31,7 +27,10 @@
   width: 100%;
   max-width: 100%;
 
-  transition: transform 0.7s ease-out, opacity 1s ease-out;
+  transition: transform 0.7s ease-out, opacity 0.7s ease-out;
+}
+
+.collection-bg {
 }
 
 @media (max-width: 1200px) {
