--- a/css/roadmap-section.css
+++ b/css/roadmap-section.css
@@ -9,6 +9,8 @@
   max-width: 60ch;
   font-size: 0.9rem;
   line-height: 1.6;
+
+  transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
 
 .steps {
@@ -26,6 +28,19 @@
 
   max-width: 400px;
   margin: 0 auto;
+}
+
+.step-one {
+  transition: transform 0.7s ease-out 0s, opacity 0.7s ease-out 0s;
+}
+.step-two {
+  transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
+}
+.step-three {
+  transition: transform 0.7s ease-out 0s, opacity 0.7s ease-out 0s;
+}
+.step-four {
+  transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
 }
 
 .step-image {
