--- a/css/utilities-section.css
+++ b/css/utilities-section.css
@@ -14,6 +14,12 @@
 
 .utilities-top-desc {
   line-height: 1.6;
+
+  transition: transform 0.7s ease-out, opacity 0.7s ease-out;
+}
+
+.utilities-top-img {
+  transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
 }
 
 .utilities-bottom {
@@ -26,6 +32,22 @@
   display: grid;
   grid-template-rows: 1fr 2fr;
   row-gap: 1rem;
+}
+
+.utility-one {
+  transition: transform 0.7s ease-out 0s, opacity 0.7s ease-out 0s;
+}
+.utility-two {
+  transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
+}
+.utility-three {
+  transition: transform 0.7s ease-out 0.6s, opacity 0.7s ease-out 0.6s;
+}
+.utility-four {
+  transition: transform 0.7s ease-out 0.9s, opacity 0.7s ease-out 0.9s;
+}
+.utility-five {
+  transition: transform 0.7s ease-out 1.2s, opacity 0.7s ease-out 1.2s;
 }
 
 .utility-icon {
