--- a/css/bg-images.css
+++ b/css/bg-images.css
@@ -23,7 +23,7 @@
 
 .bg-img-3 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
-    url('../img/CONTAINERIMAGES/Garage_PRE_Final3.jpg');
+    url('../img/CONTAINERIMAGES/Garage_PRE_Final 3.jpg');
 }
 
 .bg-img-4 {
