--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,14 @@ section {
   opacity: 1;
   transform: translateY(0rem);
 }
+
+@media (max-width: 600px) {
+  .section-title {
+    font-size: 1.5rem;
+  }
+  .btn {
+    padding: 1rem 2rem;
+    font-family: var(--anglecut);
+    font-size: 1rem;
+  }
+}
