--- a/css/collection-section.css
+++ b/css/collection-section.css
@@ -10,28 +10,12 @@
   transition: transform 0.7s ease-out, opacity 0.7s ease-out;
 }
 
-.collection-images-container {
+.video-bg {
   max-width: 1400px;
   width: 100%;
   margin: 0 auto;
 }
 
-.collection-images {
-  display: grid;
-  grid-template-columns: 1fr 2fr 3fr 4fr;
-  align-items: flex-end;
-}
-
-.collection-img {
+.video {
   width: 100%;
-  max-width: 100%;
-
-  transition: transform 0.7s ease-out, opacity 0.7s ease-out;
-}
-
-/* image  */
-
-.img-hidden {
-  opacity: 0;
-  transform: translateX(-10rem);
 }
