--- a/css/roadmap-section.css
+++ b/css/roadmap-section.css
@@ -23,9 +23,6 @@
 }
 
 .step {
-  display: grid;
-  grid-template-rows: 1fr auto;
-
   max-width: 400px;
   margin: 0 auto;
 }
@@ -63,13 +60,13 @@
 }
 
 .step-title {
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-transform: uppercase;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .step-info > ul {
-  list-style: none;
+  list-style: disc;
   line-height: 1.6;
 }
 
@@ -89,11 +86,21 @@
     row-gap: 4rem;
   }
 
+  .step {
+    /* border: 1px solid red; */
+  }
+
   .step-image {
-    max-width: 300px;
-    width: 80%;
+    max-width: 400px;
+    width: 85%;
     margin: 0 auto;
   }
+
+  .step-info {
+    max-width: 25ch;
+    margin: 0 auto;
+  }
+
   .step-one {
     transition: transform 0.7s ease-out, opacity 0.7s ease-out;
   }
