--- a/css/slider-section.css
+++ b/css/slider-section.css
@@ -1,98 +1,62 @@
 /* slider section */
 
-.charector-tabs {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-  flex-wrap: wrap;
-
-  margin-bottom: 4rem;
-}
-
-.charector-tab {
-  display: inline-block;
-}
-
-.charector-tab {
-  padding: 0.5rem 1rem;
-  font-size: 2rem;
-  font-family: var(--anglecut);
-  text-transform: uppercase;
-
-  letter-spacing: 1px;
-  cursor: pointer;
-  box-shadow: inset 0 0 0 0 var(--text-clr);
-  -webkit-transition: ease-out 0.6s;
-  -moz-transition: ease-out 0.6s;
-  transition: box-shadow ease-out 0.6s;
-}
-
-.jdm {
-  background-color: var(--blue-clr);
-
-  transition: box-shadow ease-out 0.6s, transform 0.7s ease-out 0s,
-    opacity 0.7s ease-out 0s;
-}
-
-.exotic {
-  background-color: #ed2224;
-
-  transition: box-shadow ease-out 0.6s, transform 0.7s ease-out 0.3s,
-    opacity 0.7s ease-out 0.3s;
-}
-
-.muscle {
-  background-color: #7e736d;
-
-  transition: box-shadow ease-out 0.6s, transform 0.7s ease-out 0.6s,
-    opacity 0.7s ease-out 0.6s;
-}
-
-.euro {
-  background-color: #4c44a7;
-
-  transition: box-shadow ease-out 0.6s, transform 0.7s ease-out 0.9s,
-    opacity 0.7s ease-out 0.9s;
-}
-
-.jdm:hover {
-  box-shadow: inset 400px 0 0 0 var(--text-clr);
-  color: var(--blue-clr);
-}
-
-.exotic:hover {
-  box-shadow: inset 400px 0 0 0 var(--text-clr);
-  color: var(--blue-clr);
-}
-
-.muscle:hover {
-  box-shadow: inset 400px 0 0 0 var(--text-clr);
-  color: var(--blue-clr);
-}
-
-.euro:hover {
-  box-shadow: inset 400px 0 0 0 var(--text-clr);
-  color: var(--blue-clr);
-}
-
-.slider-item {
-  display: none;
-}
-
-.active-slider-item {
+.slider-section {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: auto 5fr auto 1fr;
   column-gap: 2rem;
 }
 
-.active-tab {
-  background-color: var(--text-clr);
+.slider-section-title {
+  grid-column: 1/-1;
+  margin-bottom: 2rem;
+}
+
+.slider-control {
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.slider-control > i {
+  font-size: 3rem;
+}
+
+.slider-left,
+.slider-right {
+  cursor: pointer;
+  transition: transform 0.2s ease-out, color 0.2s ease-out;
+}
+
+.slider-left:hover,
+.slider-right:hover {
   color: var(--blue-clr);
+  transform: scale(1.5);
+}
+
+.slider-item {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 1rem;
+  padding: 0rem 1rem;
+}
+
+.slider-images {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+
+.charector-img {
+  transform: translateZ(30px);
 }
 
 .slider-item-title {
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 1.25rem;
   font-family: var(--anglecut);
   margin-bottom: 1rem;
 
@@ -103,7 +67,7 @@
 
 .slider-item-subtitle {
   font-weight: normal;
-  margin-bottom: 1rem;
+  margin-bottom: 0.9rem;
 
   animation: slide-up 0.7s ease-in;
 
@@ -112,7 +76,8 @@
 
 .slider-item-desc {
   line-height: 1.6;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
+  font-size: 0.875rem;
   font-weight: normal;
 
   animation: slide-up 0.7s ease-in;
@@ -122,7 +87,7 @@
 
 .slider-item-info {
   text-transform: uppercase;
-  font-size: 2rem;
+  font-size: 1.25rem;
   font-family: var(--anglecut);
   margin-bottom: 1rem;
 
@@ -141,8 +106,9 @@
 
 .slider-item-link {
   font-weight: normal;
-  padding-bottom: 1rem;
-  margin-bottom: 1rem;
+  padding-bottom: 0.75rem;
+  margin-bottom: 0.75rem;
+  font-size: 0.875rem;
   border-bottom: 1px solid var(--blue-clr);
 }
 
@@ -151,21 +117,15 @@
   color: var(--blue-clr);
 }
 
-.slider-images {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  column-gap: 2rem;
-}
-
 .charector-img {
-  align-self: center;
+  width: 75%;
 
   animation: slide-up 0.7s ease-in;
 
   transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
 }
 
-.marquee {
+.marquee-vertical {
   max-width: 150px;
   height: 500px;
   background-color: #000;
@@ -174,17 +134,11 @@
 
   position: relative;
 
-  animation: slide-up 0.7s ease-in;
-
   transition: transform 0.7s ease-out 0.6s, opacity 0.7s ease-out 0.6s;
 }
 
-.marquee-hidden {
-  opacity: 0;
-}
-
-.marquee::before,
-.marquee::after {
+.marquee-vertical::before,
+.marquee-vertical::after {
   position: absolute;
   left: 0;
   width: 150px;
@@ -193,22 +147,22 @@
   z-index: 1;
 }
 
-.marquee::before {
+.marquee-vertical::before {
   top: 0;
   background: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
-.marquee::after {
+.marquee-vertical::after {
   bottom: 0;
   background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
 }
 
-.marquee-content {
+.marquee-content-vertical {
   height: 100%;
-  animation: scrolling 20s linear infinite;
+  animation: scrolling-vertical 35s linear infinite;
 }
 
-@keyframes scrolling {
+@keyframes scrolling-vertical {
   0% {
     transform: translateY(0px);
   }
@@ -218,12 +172,12 @@
   }
 }
 
-.marquee-content > li {
+.marquee-content-vertical > li {
   height: 150px;
 }
 
-.marquee-content > li > img {
-  border: 1px solid #fff;
+.marquee-content-vertical > li > img {
+  border-top: 15px solid #000;
 }
 
 .slider-btn {
@@ -233,8 +187,6 @@
   display: inline-block;
   justify-self: center;
 
-  margin-top: 2rem;
-
   cursor: pointer;
   box-shadow: inset 0 0 0 0 var(--blue-clr);
   -webkit-transition: ease-out 0.4s;
@@ -243,8 +195,8 @@
 
   animation: slide-up 0.7s ease-in;
 
-  transition: box-shadow ease-out 0.6s, transform 0.7s ease-out,
-    opacity 0.7s ease-out;
+  transition: color 0.7s ease-out, box-shadow ease-out 0.6s,
+    transform 0.7s ease-out, opacity 0.7s ease-out;
 }
 
 .slider-btn:hover {
@@ -254,15 +206,48 @@
   border: none;
 }
 
-@keyframes slide-up {
-  0% {
-    opacity: 0;
-    transform: translateY(2rem);
-  }
-  100% {
-    opacity: 1;
-    transform: translateY(0rem);
-  }
+.slider-dots {
+  grid-column: 1/-1;
+  justify-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 2rem;
+  margin-top: 1rem;
+}
+
+.dot {
+  max-width: 2rem;
+  color: var(--blue-clr);
+  cursor: pointer;
+  transition: transform 0.4s ease-in-out;
+}
+
+.active-dot {
+  transform: scale(1.5);
+}
+
+.line {
+  height: 1px;
+  width: 100px;
+  background-color: #ccc;
+}
+
+/* slider css */
+
+.slider-main {
+  position: relative;
+  overflow: hidden;
+
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+}
+
+.slider-item {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  transition: transform 1s ease-in-out;
 }
 
 @media (max-width: 1200px) {
@@ -281,18 +266,28 @@
   .slider-images {
     column-gap: 1rem;
   }
-
-  .slider-btn {
-    padding: 1rem 2rem;
-    font-size: 1.5rem;
-    border-radius: 0.5rem;
-  }
 }
 
 @media (max-width: 1000px) {
   .slider-item {
     grid-template-columns: 1fr;
-    row-gap: 2rem;
+    row-gap: 1rem;
+  }
+
+  .slider-section {
+    grid-template-columns: 1fr;
+  }
+
+  .slider-images {
+    justify-content: center;
+  }
+
+  .charector-img {
+    width: 75%;
+  }
+
+  .slider-item {
+    row-gap: 0rem;
   }
 
   .slider-text,
@@ -323,12 +318,57 @@
   .charector-tab {
     font-size: 1.5rem;
   }
+
+  .marquee-vertical {
+    display: none;
+  }
 }
 
 @media (max-width: 800px) {
-  .charector-tab {
-    padding: 0.25rem 0.5rem;
-    font-size: 1rem;
+  .slider {
+    display: none;
+  }
+
+  .slider-item-desc {
+    font-size: 0.75rem;
+  }
+
+  .slider-item-info,
+  .slider-item-links {
+    display: none;
+  }
+
+  .slider-text {
+    margin: 0;
+  }
+
+  .slider-control {
+    display: none;
+  }
+
+  .slider-dots {
+    padding-bottom: 1rem;
+  }
+
+  .dot {
+    max-width: 1rem;
+  }
+
+  .line {
+    max-width: 2rem;
+  }
+
+  .slider-controls-mobile {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    margin-bottom: 1rem;
+  }
+
+  .slider-controls-mobile > i {
+    font-size: 2rem;
+    cursor: pointer;
   }
 }
 
