--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,10 @@
   --bgc: #000;
   --text-clr: #fefefe;
   --black-light: #a2a2a2;
+  --black-light-1: #0f0f0f;
   --black-light-2: #1f1f1f;
   --blue-clr: #004fde;
+  --blue-clr-op-10: rgb(0, 79, 222, 0.5);
   --franker: Francker W10;
   --anglecut: Anglecut;
 }
@@ -44,7 +46,7 @@ body {
 }
 
 section {
-  padding: 4rem 0;
+  padding: 2rem 0;
 }
 
 .section-title {
@@ -55,27 +57,28 @@ section {
 }
 
 .btn {
-  padding: 2rem 4rem;
+  padding: 1rem 2rem;
   font-family: var(--anglecut);
-  font-size: 1.5rem;
+  font-size: 0.875rem;
   text-transform: uppercase;
   background-color: var(--bgc);
   color: var(--text-clr);
   text-decoration: none;
-
+  display: inline-block;
   letter-spacing: 1px;
   cursor: pointer;
   box-shadow: inset 0 0 0 0 var(--blue-clr);
   -webkit-transition: ease-out 0.4s;
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
+  text-align: center;
+
+  border-radius: 6px;
 }
 
 .btn:hover {
   box-shadow: inset 400px 0 0 0 var(--blue-clr);
   color: var(--text-clr);
-
-  border: none;
 }
 
 /* preloader */
@@ -109,13 +112,34 @@ section {
   transform: translateY(0rem);
 }
 
+@media (max-width: 800px) {
+  .container {
+    width: 90%;
+  }
+  section {
+    padding: 2rem 0;
+  }
+}
+
 @media (max-width: 600px) {
   .section-title {
     font-size: 1.5rem;
   }
   .btn {
-    padding: 1rem 2rem;
+    padding: 0.75rem 1rem;
     font-family: var(--anglecut);
-    font-size: 1rem;
+    font-size: 0.75rem;
+    text-align: center;
+  }
+}
+@media (max-width: 470px) {
+  .section-title {
+    font-size: 1.5rem;
+  }
+  .btn {
+    padding: 0.5rem 1rem;
+    font-family: var(--anglecut);
+    font-size: 0.75rem;
+    text-align: center;
   }
 }
