--- a/css/team-section.css
+++ b/css/team-section.css
@@ -3,7 +3,6 @@
 .team-members {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  column-gap: 2rem;
   row-gap: 1rem;
 
   margin-top: 2rem;
@@ -11,6 +10,27 @@
 
 .team-member {
   text-align: center;
+  height: 300px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.team-member-four,
+.team-member-five,
+.team-member-six {
+  justify-content: flex-start;
+}
+
+.member-image {
+  width: 45%;
+  max-width: 250px;
+
+  margin-bottom: 1rem;
+
+  transition: width 0.3s ease-in;
 }
 
 .team-member:hover {
@@ -18,49 +38,47 @@
 }
 
 .team-member:hover .member-image {
-  width: 50%;
+  width: 75%;
 }
 
 .team-member:hover .member-name {
-  opacity: 0;
+  /* opacity: 0; */
+
+  display: none;
 }
 
 .team-member:hover .member-role {
   opacity: 1;
-  transform: translateY(-2.5rem);
+
+  display: block;
+  /* transform: translateY(-2.5rem); */
 }
 
 .team-member:hover .member-info {
   opacity: 1;
-  transform: translateY(-2.5rem);
+
+  display: block;
+
+  /* transform: translateY(-2.5rem); */
 }
 
 .team-member-one {
-  transition: transform 0.7s ease-out 0s, opacity 0.7s ease-out 0s;
+  transition: transform 0.7s ease-in 0s, opacity 0.7s ease-in 0s;
 }
 .team-member-two {
-  transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
+  transition: transform 0.7s ease-in 0.3s, opacity 0.7s ease-in 0.3s;
 }
 .team-member-three {
-  transition: transform 0.7s ease-out 0.6s, opacity 0.7s ease-out 0.6s;
+  transition: transform 0.7s ease-in 0.6s, opacity 0.7s ease-in 0.6s;
 }
 .team-member-four {
-  transition: transform 0.7s ease-out 0s, opacity 0.7s ease-out 0s;
+  transition: transform 0.7s ease-in 0s, opacity 0.7s ease-in 0s;
 }
 .team-member-five {
-  transition: transform 0.7s ease-out 0.3s, opacity 0.7s ease-out 0.3s;
+  transition: transform 0.7s ease-in 0.3s, opacity 0.7s ease-in 0.3s;
 }
 .team-member-six {
-  transition: transform 0.7s ease-out 0.6s, opacity 0.7s ease-out 0.6s;
-}
-
-.member-image {
-  width: 100%;
-  max-width: 300px;
-
-  margin-bottom: 1rem;
-
-  transition: width 0.5s ease-out;
+  transition: transform 0.7s ease-in 0.6s, opacity 0.7s ease-in 0.6s;
 }
 
 .member-name {
@@ -69,7 +87,7 @@
   margin-bottom: 0.25rem;
   font-weight: normal;
 
-  transition: opacity 0.25s ease-out;
+  transition: opacity 0.3s ease-in;
 }
 
 .member-role {
@@ -80,7 +98,10 @@
   font-size: 0.9rem;
 
   opacity: 0;
-  transition: opacity 0.25s ease-out;
+
+  display: none;
+
+  transition: opacity 0.3s ease-in, transform 0.3s ease-in;
 }
 
 .member-info {
@@ -90,13 +111,9 @@
   margin: 0 auto;
 
   opacity: 0;
-  transition: opacity 0.25s ease-out;
-}
 
-@media (max-width: 1200px) {
-  .member-image {
-    max-width: 200px;
-  }
+  display: none;
+  transition: opacity 0.3s ease-in, transform 0.3s ease-in;
 }
 
 @media (max-width: 800px) {
@@ -104,22 +121,25 @@
     grid-template-columns: 1fr;
     row-gap: 1rem;
   }
+  .team-member {
+    height: auto;
+  }
   .team-member-one {
-    transition: transform 0.7s ease-out, opacity 0.7s ease-out;
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
   }
   .team-member-two {
-    transition: transform 0.7s ease-out, opacity 0.7s ease-out;
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
   }
   .team-member-three {
-    transition: transform 0.7s ease-out, opacity 0.7s ease-out;
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
   }
   .team-member-four {
-    transition: transform 0.7s ease-out, opacity 0.7s ease-out;
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
   }
   .team-member-five {
-    transition: transform 0.7s ease-out, opacity 0.7s ease-out;
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
   }
   .team-member-six {
-    transition: transform 0.7s ease-out, opacity 0.7s ease-out;
+    transition: transform 0.3s ease-in, opacity 0.3s ease-in;
   }
 }
