--- a/css/utilities-section.css
+++ b/css/utilities-section.css
@@ -25,13 +25,15 @@
 .utilities-bottom {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  column-gap: 1rem;
+  column-gap: 2rem;
+  row-gap: 2rem;
 }
 
-.utility {
-  display: grid;
-  grid-template-rows: 1fr 2fr;
-  row-gap: 1rem;
+.utility-title {
+  font-family: var(--anglecut);
+  font-size: 0.875rem;
+  margin-bottom: 0.5rem;
+  letter-spacing: 1px;
 }
 
 .utility-one {
@@ -52,13 +54,13 @@
 
 .utility-icon {
   max-width: 5rem;
-  max-height: 5rem;
   object-fit: cover;
+  margin-bottom: 1rem;
 }
 
 .utility-text {
   line-height: 1.6;
-  font-size: 0.9rem;
+  font-size: 0.875rem;
 }
 
 @media (max-width: 1200px) {
@@ -111,10 +113,13 @@
     grid-template-columns: 1fr;
     row-gap: 2rem;
   }
+
   .utility-text {
     max-width: 40ch;
   }
   .utility {
-    grid-template-rows: 1fr auto;
+    max-width: 300px;
+    justify-self: center;
+    text-align: center;
   }
 }
