--- a/css/slider-section.css
+++ b/css/slider-section.css
@@ -38,7 +38,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 1rem;
-  padding: 0rem 1rem;
+  padding: 1rem;
 }
 
 .slider-images {
@@ -118,7 +118,7 @@
 }
 
 .charector-img {
-  width: 75%;
+  width: 70%;
 
   animation: slide-up 0.7s ease-in;
 
@@ -300,12 +300,6 @@
     grid-row: 1/2;
   }
 
-  .charector-tabs {
-    max-width: 800px;
-    margin: 0 auto;
-    margin-bottom: 4rem;
-  }
-
   .marquee {
     justify-self: flex-end;
   }
@@ -313,10 +307,6 @@
   .charector-img {
     width: 100%;
     max-width: 420px;
-  }
-
-  .charector-tab {
-    font-size: 1.5rem;
   }
 
   .marquee-vertical {
