--- a/css/slider-section.css
+++ b/css/slider-section.css
@@ -2,9 +2,12 @@
 
 .slider-section {
   display: grid;
-  grid-template-columns: auto 5fr auto 1fr;
+  /* change */
+  grid-template-columns: 26px 5fr 26px 1fr;
   column-gap: 2rem;
 }
+
+/* change */
 
 .slider-section-title {
   grid-column: 1/-1;
@@ -19,12 +22,14 @@
 }
 
 .slider-control > i {
-  font-size: 3rem;
+  /* change */
 }
 
 .slider-left,
 .slider-right {
   cursor: pointer;
+  /* change */
+  font-size: 3rem;
   transition: transform 0.2s ease-out, color 0.2s ease-out;
 }
 
@@ -34,11 +39,16 @@
   transform: scale(1.5);
 }
 
+.slider-controls-mobile {
+  display: none;
+}
+
 .slider-item {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 1rem;
   padding: 1rem;
+  align-items: center;
 }
 
 .slider-images {
@@ -51,6 +61,8 @@
 }
 
 .charector-img {
+  transition: all 0.6s ease-in-out;
+
   transform: translateZ(30px);
 }
 
@@ -180,10 +192,17 @@
   border-top: 15px solid #000;
 }
 
+.slider-btn-container {
+  grid-column: 1/-1;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .slider-btn {
   background-color: var(--text-clr);
   color: var(--bgc);
-  grid-column: 1/-1;
   display: inline-block;
   justify-self: center;
 
@@ -193,7 +212,7 @@
   -moz-transition: ease-out 0.4s;
   transition: ease-out 0.4s;
 
-  animation: slide-up 0.7s ease-in;
+  margin-top: 2rem;
 
   transition: color 0.7s ease-out, box-shadow ease-out 0.6s,
     transform 0.7s ease-out, opacity 0.7s ease-out;
@@ -207,47 +226,74 @@
 }
 
 .slider-dots {
-  grid-column: 1/-1;
+  grid-column: 2/3;
   justify-items: center;
   display: flex;
   justify-content: center;
   align-items: center;
   padding-bottom: 2rem;
-  margin-top: 1rem;
 }
 
 .dot {
-  max-width: 2rem;
-  color: var(--blue-clr);
+  max-width: 1rem;
   cursor: pointer;
   transition: transform 0.4s ease-in-out;
 }
 
 .active-dot {
-  transform: scale(1.5);
+  transform: scale(2);
 }
 
 .line {
   height: 1px;
-  width: 100px;
+  width: 50px;
   background-color: #ccc;
 }
 
 /* slider css */
+/* css for slider */
 
 .slider-main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  overflow: hidden;
 
-  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+  height: 500px;
+
+  overflow: hidden;
 }
 
 .slider-item {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
 
-  transition: transform 1s ease-in-out;
+  opacity: 0;
+
+  transition: all 0.6s ease-in-out;
+}
+
+.slider-item.active {
+  opacity: 1;
+  transform: translateX(0);
+
+  transition: all 0.6s ease-in-out;
+}
+.slider-item.next {
+  opacity: 0;
+  transform: translateX(100%);
+
+  transition: all 0.6s ease-in-out;
+}
+.slider-item.last {
+  opacity: 0;
+
+  transform: translateX(-100%);
+
+  transition: all 0.6s ease-in-out;
 }
 
 @media (max-width: 1200px) {
@@ -269,9 +315,47 @@
 }
 
 @media (max-width: 1000px) {
+  /* change slider display none removed */
+
+  .slider-section {
+    display: block;
+  }
+
+  .slider-main {
+    height: 810px;
+  }
+
   .slider-item {
+    grid-column: 1/-1;
+
     grid-template-columns: 1fr;
     row-gap: 1rem;
+  }
+
+  /* change */
+  .slider-controls-mobile {
+    display: block;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+  }
+
+  .slider-dots {
+    padding-bottom: 1rem;
+  }
+
+  .dot {
+    max-width: 1.25rem;
+  }
+
+  .active-dot {
+    transform: scale(1.5);
+  }
+
+  .slider-control {
+    display: none;
   }
 
   .slider-section {
@@ -284,6 +368,7 @@
 
   .charector-img {
     width: 75%;
+    max-width: 400px;
   }
 
   .slider-item {
@@ -292,7 +377,7 @@
 
   .slider-text,
   .slider-images {
-    max-width: 800px;
+    max-width: 600px;
     margin: 0 auto;
   }
 
@@ -304,21 +389,15 @@
     justify-self: flex-end;
   }
 
-  .charector-img {
-    width: 100%;
-    max-width: 420px;
-  }
-
   .marquee-vertical {
     display: none;
   }
 }
 
 @media (max-width: 800px) {
-  .slider {
-    display: none;
+  .slider-main {
+    height: 600px;
   }
-
   .slider-item-desc {
     font-size: 0.75rem;
   }
@@ -326,10 +405,6 @@
   .slider-item-info,
   .slider-item-links {
     display: none;
-  }
-
-  .slider-text {
-    margin: 0;
   }
 
   .slider-control {
