--- a/css/bg-images.css
+++ b/css/bg-images.css
@@ -16,6 +16,8 @@
     url('../img/CONTAINERIMAGES/City Banner.jpg');
   min-height: 80vh;
   background-position: 100% bottom;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .bg-img-2 {
@@ -32,7 +34,6 @@
 .bg-img-4 {
   background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
     url('../img/CONTAINERIMAGES/MT_JUNKYARD.jpg');
-  /* background-size: contain; */
 }
 
 .bg-img-5 {
