--- a/css/bg-images.css
+++ b/css/bg-images.css
@@ -52,7 +52,7 @@
   }
   .bg-img-2 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
-      url('../img/CONTAINERIMAGES/Home_Mobile_image2.jpg');
+      url('../img/AUTO SHOP/autoshop image.png');
     background-position: center center;
     background-size: cover;
   }
